BankDatabaseAccess/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankdatabaseaccess
  labels:
    name: bankdatabaseaccess
    environment: production
    app: bankdatabaseaccess
