BankDatabaseAccess/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankdatabaseaccess-service
  namespace: bankdatabaseaccess
  labels:
    app: bankdatabaseaccess
    component: library
spec:
  type: ClusterIP
  selector:
    app: bankdatabaseaccess
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
